--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,3 @@
-
 {
     "name": "3ev/typo3-utils",
     "type": "library",
@@ -20,7 +19,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0"
+        "php": ">=5.5.0",
+        "willdurand/geocoder": "~3.1"
     },
     "autoload": {
         "psr-4": {
